--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
   <body>
     <h1>Hello Austin</h1>
+    <p>
+      I think that all people should vaccinate their kids. I mean, you'd think that eradicating measles
+      would've been good enough that vaccines are a good thing, but I guess not. I guess having another
+      measles outbreak 50 years after we eradicated it is fine. It's fine. Fine.
+    </p>
   </body>
 </html>
